syntax = "proto3";

option csharp_namespace = "AuthManager.GRPC";

package AuthManager;

// The greeting service definition.
service Email {
  // Sends a greeting
  rpc ConfirmEmail (ConfirmEmailRequest) returns (ConfirmEmailResponse);
}

message ConfirmEmailRequest {
  string username = 1;
  string token = 2;
}

message ConfirmEmailResponse {
}